force-app/main/default/objects/Portal_button_visibility__mdt/Portal_button_visibility__mdt.object-meta.xml
<CustomObject>
    <description>Determines whether a button is visible based on the following criteria:
- FIlter logic (how to combine filters)
- Audience(s) (Vendor/Hiring manager/Professional)</description>
    <label>Portal button visibility</label>
    <pluralLabel>Portal button visibilities</pluralLabel>
</CustomObject>