force-app/main/default/objects/Portal_button_visibility__mdt/fields/Filter_logic__c.field-meta.xml
<CustomField>
    <fullName>Filter_logic__c</fullName>
    <description>If there are multiple filters, this field determines how they work together to determine visibility. Looks like this:
(1 AND 2) means that both the filter with Number__c 1 and the one with Number__c 2 have to evaluate to true. You can nest them as much as you want. If you con&apos;t fill this field out, all filters are linked together with AND.</description>
    <inlineHelpText>If there are multiple filters, this field determines how they work together to determine visibility. Looks like this:
(1 AND 2) means that both the filter with Number__c 1 and the one with Number__c 2 have to evaluate to true. You can nest them as much as you want. If you con&apos;t fill this field out, all filters are linked together with AND.</inlineHelpText>
    <label>Filter logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>