force-app/main/default/objects/Portal_button_visibility__mdt/fields/Visible_in_hiring_manager_portal__c.field-meta.xml
<CustomField>
    <fullName>Visible_in_hiring_manager_portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible in hiring manager portal</label>
    <type>Checkbox</type>
</CustomField>